Fixed bugs, added repetition of input until stopped

--- a/SiAOD/SiAOD/SiAOD.vcxproj
+++ b/SiAOD/SiAOD/SiAOD.vcxproj
@@ -133,7 +133,7 @@
     <ClCompile Include="TaskContainer.cpp" />
     <ClCompile Include="Homework5_1.cpp" />
     <ClCompile Include="HomeworkSelector.cpp" />
-    <ClCompile Include="Homework_5_2.cpp" />
+    <ClCompile Include="Homework5_2.cpp" />
     <ClCompile Include="Listings.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="SiAOD.cpp" />
@@ -143,7 +143,7 @@
     <ClInclude Include="TaskContainer.h" />
     <ClInclude Include="Homework5_1.h" />
     <ClInclude Include="HomeworkSelector.h" />
-    <ClInclude Include="Homework_5_2.h" />
+    <ClInclude Include="Homework5_2.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Task.h" />
   </ItemGroup>
