--- a/SiAOD/SiAOD/SiAOD.vcxproj
+++ b/SiAOD/SiAOD/SiAOD.vcxproj
@@ -110,6 +110,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AddModuleNamesToAssembly>.inl</AddModuleNamesToAssembly>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -129,7 +130,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BankInfo.cpp" />
     <ClCompile Include="Global.cpp" />
+    <ClCompile Include="HashTable.inl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Homework6_1.cpp" />
+    <ClCompile Include="TableEntry.inl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="TaskContainer.cpp" />
     <ClCompile Include="Homework5_1.cpp" />
     <ClCompile Include="HomeworkSelector.cpp" />
@@ -139,7 +148,11 @@
     <ClCompile Include="SiAOD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BankInfo.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="HashTable.h" />
+    <ClInclude Include="Homework6_1.h" />
+    <ClInclude Include="TableEntry.h" />
     <ClInclude Include="TaskContainer.h" />
     <ClInclude Include="Homework5_1.h" />
     <ClInclude Include="HomeworkSelector.h" />
