--- a/SiAOD/SiAOD/SiAOD.vcxproj.filters
+++ b/SiAOD/SiAOD/SiAOD.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="BankInfo.cpp">
       <Filter>Исходные файлы\Stuctures</Filter>
     </ClCompile>
+    <ClCompile Include="Homework6_2.cpp">
+      <Filter>Исходные файлы\Homeworks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -103,6 +106,9 @@
     </ClInclude>
     <ClInclude Include="TableEntry.h">
       <Filter>Файлы заголовков\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="Homework6_2.h">
+      <Filter>Файлы заголовков\Homeworks</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
