--- a/SiAOD/SiAOD/SiAOD.vcxproj.filters
+++ b/SiAOD/SiAOD/SiAOD.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="Homework6_2.cpp">
       <Filter>Исходные файлы\Homeworks</Filter>
     </ClCompile>
+    <ClCompile Include="BinaryTree.cpp">
+      <Filter>Исходные файлы\Stuctures</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework7_1.cpp">
+      <Filter>Исходные файлы\Homeworks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -108,6 +114,12 @@
       <Filter>Файлы заголовков\Structures</Filter>
     </ClInclude>
     <ClInclude Include="Homework6_2.h">
+      <Filter>Файлы заголовков\Homeworks</Filter>
+    </ClInclude>
+    <ClInclude Include="BinaryTree.h">
+      <Filter>Файлы заголовков\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="Homework7_1.h">
       <Filter>Файлы заголовков\Homeworks</Filter>
     </ClInclude>
   </ItemGroup>
