--- a/SiAOD/SiAOD/SiAOD.vcxproj.filters
+++ b/SiAOD/SiAOD/SiAOD.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClCompile Include="Homework7_1.cpp">
       <Filter>Исходные файлы\Homeworks</Filter>
     </ClCompile>
+    <ClCompile Include="Homework7_2.cpp">
+      <Filter>Исходные файлы\Homeworks</Filter>
+    </ClCompile>
+    <ClCompile Include="Graph.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -121,6 +127,12 @@
     </ClInclude>
     <ClInclude Include="Homework7_1.h">
       <Filter>Файлы заголовков\Homeworks</Filter>
+    </ClInclude>
+    <ClInclude Include="Homework7_2.h">
+      <Filter>Файлы заголовков\Homeworks</Filter>
+    </ClInclude>
+    <ClInclude Include="Graph.h">
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
